--- a/index.html
+++ b/index.html
@@ -1,136 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PoorCoin (POOR) – Official Website</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>PoorCoin (POOR) — The People’s Meme Token</title>
   <style>
+    /* ===== Reset & Fonts ===== */
+    * {margin:0; padding:0; box-sizing:border-box;}
     body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #0d1117;
-      color: #e6edf3;
+      font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+      background: linear-gradient(135deg, #0f0f0f 0%, #1c1c24 100%);
+      color: #fff;
+      overflow-x: hidden;
     }
+    a {text-decoration:none; color:inherit;}
+    h1,h2,h3 {font-weight:700;}
+
+    /* ===== Header ===== */
     header {
-      background: #161b22;
-      padding: 15px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      position:fixed;
+      top:0; left:0; right:0;
+      background: rgba(0,0,0,0.7);
+      backdrop-filter: blur(10px);
+      padding:15px 40px;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      z-index:1000;
     }
-    header h1 {
-      margin: 0;
-      font-size: 22px;
-      color: #f0b90b;
+    header .logo {
+      font-size:1.4em;
+      font-weight:800;
+      color:#facc15;
     }
-    nav a {
-      margin-left: 20px;
-      text-decoration: none;
-      color: #58a6ff;
+    header nav a {
+      margin-left:20px;
+      font-size:0.95em;
+      color:#aaa;
+      transition:0.2s;
     }
-    main {
-      padding: 30px;
-      max-width: 1000px;
-      margin: auto;
-    }
+    header nav a:hover {color:#fff;}
+
+    /* ===== Hero ===== */
     .hero {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
+      height:100vh;
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
+      align-items:center;
+      text-align:center;
+      padding:0 20px;
+      background: radial-gradient(circle at 30% 20%, rgba(124,92,255,.25), transparent 60%),
+                  radial-gradient(circle at 80% 80%, rgba(34,197,94,.2), transparent 60%);
     }
+    .hero h1 {
+      font-size:clamp(32px,6vw,64px);
+      margin-bottom:20px;
+      line-height:1.2;
+    }
+    .hero p {
+      font-size:clamp(16px,2vw,20px);
+      max-width:700px;
+      margin:0 auto 30px;
+      color:#bbb;
+    }
+    .hero-buttons {
+      display:flex;
+      flex-wrap:wrap;
+      gap:15px;
+      justify-content:center;
+    }
+    .hero-buttons a {
+      background:#7c5cff;
+      padding:12px 24px;
+      border-radius:30px;
+      color:#fff;
+      font-weight:600;
+      transition:0.2s;
+    }
+    .hero-buttons a:hover {background:#9f84ff;}
+
+    /* Floating logo */
     .hero img {
-      max-width: 220px;
-      border-radius: 15px;
+      width:200px;
+      margin-top:40px;
+      animation: float 3s ease-in-out infinite;
     }
-    .buttons button {
-      margin-right: 10px;
-      margin-top: 10px;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: bold;
+    @keyframes float {
+      0%,100% {transform: translateY(0);}
+      50% {transform: translateY(-15px);}
     }
-    .buy { background: #16c784; color: #fff; }
-    .bsc { background: #2081e2; color: #fff; }
-    section {
-      margin-top: 40px;
-      padding: 20px;
-      background: #161b22;
-      border-radius: 10px;
+
+    /* ===== Tokenomics ===== */
+    section#tokenomics {
+      padding:80px 20px;
+      background:#0f0f0f;
+      text-align:center;
     }
-    h2 { color: #f0b90b; }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #161b22;
-      margin-top: 40px;
-      color: #8b949e;
+    #tokenomics h2 {font-size:2.5em; margin-bottom:15px;}
+    #tokenomics p {color:#aaa; max-width:800px; margin:0 auto 40px;}
+    .cards {
+      display:grid;
+      grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
+      gap:20px;
+      max-width:1000px;
+      margin:0 auto 40px;
     }
+    .card {
+      background:#1c1c24;
+      padding:20px;
+      border-radius:15px;
+      box-shadow:0 4px 15px rgba(0,0,0,.4);
+    }
+    .card h3 {margin-bottom:10px; color:#7c5cff;}
+    .card p {font-size:1.2em; font-weight:600;}
+
+    canvas {max-width:400px; margin:0 auto;}
+
+    /* ===== Floating Buy Button ===== */
+    .buy-btn {
+      position:fixed;
+      bottom:20px; right:20px;
+      background:#22c55e;
+      color:#fff;
+      padding:14px 26px;
+      border-radius:50px;
+      font-weight:700;
+      box-shadow:0 4px 20px rgba(0,0,0,.4);
+      transition:0.2s;
+      z-index:1000;
+    }
+    .buy-btn:hover {background:#16a34a;}
   </style>
 </head>
 <body>
+  <!-- Header -->
+  <header>
+    <div class="logo">PoorCoin (POOR)</div>
+    <nav>
+      <a href="#tokenomics">Tokenomics</a>
+      <a href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">BscScan</a>
+      <a href="https://t.me/YOUR_TELEGRAM" target="_blank">Telegram</a>
+      <a href="https://twitter.com/YOUR_TWITTER" target="_blank">Twitter</a>
+    </nav>
+  </header>
 
-<header>
-  <h1>PoorCoin (POOR)</h1>
-  <nav>
-    <a href="https://pancakeswap.finance/swap">Buy on PancakeSwap</a>
-    <a href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336">BscScan</a>
-    <a href="https://t.me/poorcoin_bsc">Telegram</a>
-    <a href="https://twitter.com/SeeeskoTodorov">Twitter</a>
-    <a href="whitepaper.html">Whitepaper</a>
-    <a href="faq.html">FAQ</a>
-  </nav>
-</header>
-
-<main>
-  <div class="hero">
-    <div>
-      <h2>Meet <span style="color:#16c784">POOR</span> — the People's Meme Token</h2>
-      <p>Community-driven, simple tokenomics, 1,000,000,000 total supply on BNB Smart Chain (BEP-20).</p>
-      <div class="buttons">
-        <button class="buy" onclick="window.open('https://pancakeswap.finance/swap?outputCurrency=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336')">Buy on PancakeSwap</button>
-        <button class="bsc" onclick="window.open('https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336')">View on BscScan</button>
-      </div>
-      <p><b>Contract Address:</b><br>
-      0x6208384e2dda2ab804a5b75aebc1609ba9ce7336</p>
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>PoorCoin — The People’s Meme Token</h1>
+    <p>Community-driven, transparent and fair. With 1,000,000,000 POOR supply, 200M locked forever and only 10M currently circulating, PoorCoin is built to grow with its community.</p>
+    <div class="hero-buttons">
+      <a href="https://pancakeswap.finance/swap?outputCurrency=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">Buy on PancakeSwap</a>
+      <a href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">View on BscScan</a>
     </div>
-    <img src="PoorCoin.png" alt="PoorCoin Logo">
-  </div>
-
-  <section>
-    <h2>About PoorCoin</h2>
-    <p>PoorCoin (POOR) is a community-driven meme token launched on the <b>BNB Smart Chain (BEP-20)</b>. 
-    With a total supply of <b>1,000,000,000 POOR</b>, the project is designed to be simple, transparent, 
-    and fair for everyone. Liquidity is secured on PancakeSwap, while the growth is driven by the community 
-    across social media platforms.</p>
-    <p>PoorCoin is not just a token — it’s a symbol of hope for those who start small but aim big 🚀</p>
+    <img src="YOUR_LOGO.png" alt="PoorCoin Logo">
   </section>
 
-  <section>
+  <!-- Tokenomics -->
+  <section id="tokenomics">
     <h2>Tokenomics</h2>
-    <ul>
-      <li><b>Symbol:</b> POOR</li>
-      <li><b>Decimals:</b> 18</li>
-      <li><b>Total Supply:</b> 1,000,000,000</li>
-      <li><b>Chain:</b> BNB Smart Chain (BSC)</li>
-    </ul>
+    <p>PoorCoin ($POOR) is designed with transparency and sustainability. Part of the supply is permanently locked in the contract, reducing the effective circulating supply.</p>
+    <div class="cards">
+      <div class="card"><h3>Total Supply</h3><p>1,000,000,000 POOR</p></div>
+      <div class="card"><h3>Locked Supply</h3><p style="color:#ef4444;">200,000,000 POOR</p></div>
+      <div class="card"><h3>Owner Holdings</h3><p style="color:#60a5fa;">790,000,000 POOR</p></div>
+      <div class="card"><h3>Circulating</h3><p style="color:#22c55e;">10,000,000 POOR</p></div>
+    </div>
+    <canvas id="chart"></canvas>
   </section>
 
-  <section>
-    <h2>FAQ</h2>
-    <p><b>Q: Where can I buy POOR?</b><br>A: On PancakeSwap using the official contract address.</p>
-    <p><b>Q: Is the contract verified?</b><br>A: Yes, the smart contract is verified on BscScan.</p>
-    <p><b>Q: What’s the vision?</b><br>A: To build a fun, fair and community-driven meme token with long-term growth.</p>
-  </section>
+  <!-- Floating Buy Button -->
+  <a class="buy-btn" href="https://pancakeswap.finance/swap?outputCurrency=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">Buy POOR</a>
 
-</main>
-
-<footer>
-  <p>© 2025 PoorCoin. All rights reserved.</p>
-</footer>
-
+  <!-- Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script>
+    const ctx = document.getElementById('chart');
+    new Chart(ctx, {
+      type: 'pie',
+      data: {
+        labels: ['Locked (200M)','Owner Holdings (790M)','Circulating (10M)'],
+        datasets: [{
+          data: [200,790,10],
+          backgroundColor:['#ef4444','#60a5fa','#22c55e']
+        }]
+      }
+    });
+  </script>
 </body>
 </html>
