--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PoorCoin (POOR) — The People’s Meme Token</title>
   <style>
-    /* ===== Reset & Fonts ===== */
     * {margin:0; padding:0; box-sizing:border-box;}
     body {
       font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -15,137 +14,85 @@
     }
     a {text-decoration:none; color:inherit;}
     h1,h2,h3 {font-weight:700;}
-
-    /* ===== Header ===== */
     header {
-      position:fixed;
-      top:0; left:0; right:0;
+      position:fixed; top:0; left:0; right:0;
       background: rgba(0,0,0,0.7);
       backdrop-filter: blur(10px);
       padding:15px 40px;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
+      display:flex; justify-content:space-between; align-items:center;
       z-index:1000;
     }
-    header .logo {
-      font-size:1.4em;
-      font-weight:800;
-      color:#facc15;
-    }
+    header .logo {font-size:1.4em; font-weight:800; color:#facc15;}
     header nav a {
-      margin-left:20px;
-      font-size:0.95em;
-      color:#aaa;
-      transition:0.2s;
+      margin-left:20px; font-size:0.95em; color:#aaa; transition:0.2s;
     }
     header nav a:hover {color:#fff;}
-
-    /* ===== Hero ===== */
     .hero {
-      height:100vh;
-      display:flex;
-      flex-direction:column;
-      justify-content:center;
-      align-items:center;
-      text-align:center;
-      padding:0 20px;
+      height:100vh; display:flex; flex-direction:column; justify-content:center;
+      align-items:center; text-align:center; padding:0 20px;
       background: radial-gradient(circle at 30% 20%, rgba(124,92,255,.25), transparent 60%),
                   radial-gradient(circle at 80% 80%, rgba(34,197,94,.2), transparent 60%);
     }
-    .hero h1 {
-      font-size:clamp(32px,6vw,64px);
-      margin-bottom:20px;
-      line-height:1.2;
-    }
-    .hero p {
-      font-size:clamp(16px,2vw,20px);
-      max-width:700px;
-      margin:0 auto 30px;
-      color:#bbb;
-    }
-    .hero-buttons {
-      display:flex;
-      flex-wrap:wrap;
-      gap:15px;
-      justify-content:center;
-    }
+    .hero h1 {font-size:clamp(32px,6vw,64px); margin-bottom:20px; line-height:1.2;}
+    .hero p {font-size:clamp(16px,2vw,20px); max-width:700px; margin:0 auto 20px; color:#bbb;}
+    .hero-buttons {display:flex; flex-wrap:wrap; gap:15px; justify-content:center; margin-bottom:20px;}
     .hero-buttons a {
-      background:#7c5cff;
-      padding:12px 24px;
-      border-radius:30px;
-      color:#fff;
-      font-weight:600;
-      transition:0.2s;
+      background:#7c5cff; padding:12px 24px; border-radius:30px;
+      color:#fff; font-weight:600; transition:0.2s;
     }
     .hero-buttons a:hover {background:#9f84ff;}
-
-    /* Floating logo */
     .hero img {
-      width:200px;
-      margin-top:40px;
+      width:200px; margin-top:20px;
       animation: float 3s ease-in-out infinite;
     }
-    @keyframes float {
-      0%,100% {transform: translateY(0);}
-      50% {transform: translateY(-15px);}
+    @keyframes float {0%,100% {transform: translateY(0);} 50% {transform: translateY(-15px);}}
+    .contract-box {
+      margin-top:30px; padding:15px; background:#1c1c24;
+      border-radius:10px; display:inline-block; text-align:left;
     }
-
-    /* ===== Tokenomics ===== */
-    section#tokenomics {
-      padding:80px 20px;
-      background:#0f0f0f;
-      text-align:center;
+    .contract-box p {margin-bottom:10px; font-size:14px; color:#bbb;}
+    .contract-address {
+      font-family: monospace; background:#000; padding:8px 12px; border-radius:5px;
+      display:inline-block; margin-right:10px; color:#0f0;
     }
+    .copy-btn {
+      background:#22c55e; border:none; padding:8px 14px; border-radius:5px;
+      color:#fff; cursor:pointer; font-weight:600;
+    }
+    section#tokenomics {padding:80px 20px; background:#0f0f0f; text-align:center;}
     #tokenomics h2 {font-size:2.5em; margin-bottom:15px;}
     #tokenomics p {color:#aaa; max-width:800px; margin:0 auto 40px;}
     .cards {
-      display:grid;
-      grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
-      gap:20px;
-      max-width:1000px;
-      margin:0 auto 40px;
+      display:grid; grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
+      gap:20px; max-width:1000px; margin:0 auto 40px;
     }
     .card {
-      background:#1c1c24;
-      padding:20px;
-      border-radius:15px;
+      background:#1c1c24; padding:20px; border-radius:15px;
       box-shadow:0 4px 15px rgba(0,0,0,.4);
     }
     .card h3 {margin-bottom:10px; color:#7c5cff;}
     .card p {font-size:1.2em; font-weight:600;}
-
     canvas {max-width:400px; margin:0 auto;}
-
-    /* ===== Floating Buy Button ===== */
     .buy-btn {
-      position:fixed;
-      bottom:20px; right:20px;
-      background:#22c55e;
-      color:#fff;
-      padding:14px 26px;
-      border-radius:50px;
-      font-weight:700;
-      box-shadow:0 4px 20px rgba(0,0,0,.4);
-      transition:0.2s;
-      z-index:1000;
+      position:fixed; bottom:20px; right:20px;
+      background:#22c55e; color:#fff; padding:14px 26px; border-radius:50px;
+      font-weight:700; box-shadow:0 4px 20px rgba(0,0,0,.4); transition:0.2s; z-index:1000;
     }
     .buy-btn:hover {background:#16a34a;}
   </style>
 </head>
 <body>
-  <!-- Header -->
   <header>
     <div class="logo">PoorCoin (POOR)</div>
     <nav>
       <a href="#tokenomics">Tokenomics</a>
       <a href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">BscScan</a>
-      <a href="https://t.me/YOUR_TELEGRAM" target="_blank">Telegram</a>
-      <a href="https://twitter.com/YOUR_TWITTER" target="_blank">Twitter</a>
+      <a href="https://t.me/poorcoin-bsc" target="_blank">Telegram</a>
+      <a href="https://twitter.com/SeeeskoTodorov" target="_blank">Twitter</a>
+      <a href="https://medium.com/@seeesko" target="_blank">Medium</a>
     </nav>
   </header>
 
-  <!-- Hero Section -->
   <section class="hero">
     <h1>PoorCoin — The People’s Meme Token</h1>
     <p>Community-driven, transparent and fair. With 1,000,000,000 POOR supply, 200M locked forever and only 10M currently circulating, PoorCoin is built to grow with its community.</p>
@@ -153,10 +100,15 @@
       <a href="https://pancakeswap.finance/swap?outputCurrency=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">Buy on PancakeSwap</a>
       <a href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">View on BscScan</a>
     </div>
-    <img src="YOUR_LOGO.png" alt="PoorCoin Logo">
+    <img src="poorcoin.png" alt="PoorCoin Logo">
+
+    <div class="contract-box">
+      <p>Official Contract Address:</p>
+      <span class="contract-address" id="contract">0x6208384e2dda2ab804a5b75aebc1609ba9ce7336</span>
+      <button class="copy-btn" onclick="copyAddress()">Copy</button>
+    </div>
   </section>
 
-  <!-- Tokenomics -->
   <section id="tokenomics">
     <h2>Tokenomics</h2>
     <p>PoorCoin ($POOR) is designed with transparency and sustainability. Part of the supply is permanently locked in the contract, reducing the effective circulating supply.</p>
@@ -169,10 +121,8 @@
     <canvas id="chart"></canvas>
   </section>
 
-  <!-- Floating Buy Button -->
   <a class="buy-btn" href="https://pancakeswap.finance/swap?outputCurrency=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">Buy POOR</a>
 
-  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
     const ctx = document.getElementById('chart');
@@ -186,6 +136,11 @@
         }]
       }
     });
+    function copyAddress() {
+      const text = document.getElementById("contract").innerText;
+      navigator.clipboard.writeText(text);
+      alert("Contract address copied!");
+    }
   </script>
 </body>
 </html>
