--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PoorCoin (POOR) — The People’s Meme Token</title>
   <style>
-    * {margin:0; padding:0; box-sizing:border-box;}
+    * { margin:0; padding:0; box-sizing:border-box; }
     body {
       font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
       background: linear-gradient(135deg, #0f0f0f 0%, #1c1c24 100%);
       color: #fff;
       overflow-x: hidden;
     }
-    a {text-decoration:none; color:inherit;}
-    h1,h2,h3 {font-weight:700;}
+    a { text-decoration:none; color:inherit; }
+    h1,h2,h3 { font-weight:700; }
     header {
       position:fixed; top:0; left:0; right:0;
       background: rgba(0,0,0,0.7);
@@ -22,46 +22,49 @@
       display:flex; justify-content:space-between; align-items:center;
       z-index:1000;
     }
-    header .logo {font-size:1.4em; font-weight:800; color:#facc15;}
+    header .logo a {
+      font-size:1.4em; font-weight:800; color:#facc15;
+      text-decoration:none;
+    }
     header nav a {
       margin-left:20px; font-size:0.95em; color:#aaa; transition:0.2s;
     }
-    header nav a:hover {color:#fff;}
+    header nav a:hover { color:#fff; }
     .hero {
       height:100vh; display:flex; flex-direction:column; justify-content:center;
       align-items:center; text-align:center; padding:0 20px;
       background: radial-gradient(circle at 30% 20%, rgba(124,92,255,.25), transparent 60%),
                   radial-gradient(circle at 80% 80%, rgba(34,197,94,.2), transparent 60%);
     }
-    .hero h1 {font-size:clamp(32px,6vw,64px); margin-bottom:20px; line-height:1.2;}
-    .hero p {font-size:clamp(16px,2vw,20px); max-width:700px; margin:0 auto 20px; color:#bbb;}
-    .hero-buttons {display:flex; flex-wrap:wrap; gap:15px; justify-content:center; margin-bottom:20px;}
+    .hero h1 { font-size:clamp(32px,6vw,64px); margin-bottom:20px; line-height:1.2; }
+    .hero p { font-size:clamp(16px,2vw,20px); max-width:700px; margin:0 auto 20px; color:#bbb; }
+    .hero-buttons { display:flex; flex-wrap:wrap; gap:15px; justify-content:center; margin-bottom:20px; }
     .hero-buttons a {
       background:#7c5cff; padding:12px 24px; border-radius:30px;
       color:#fff; font-weight:600; transition:0.2s;
     }
-    .hero-buttons a:hover {background:#9f84ff;}
+    .hero-buttons a:hover { background:#9f84ff; }
     .hero img {
       width:200px; margin-top:20px;
       animation: float 3s ease-in-out infinite;
     }
-    @keyframes float {0%,100% {transform: translateY(0);} 50% {transform: translateY(-15px);}}
+    @keyframes float { 0%,100% { transform: translateY(0);} 50% { transform: translateY(-15px);} }
     .contract-box {
       margin-top:30px; padding:15px; background:#1c1c24;
       border-radius:10px; display:inline-block; text-align:left;
     }
-    .contract-box p {margin-bottom:10px; font-size:14px; color:#bbb;}
+    .contract-box p { margin-bottom:10px; font-size:14px; color:#bbb; }
     .contract-address {
       font-family: monospace; background:#000; padding:8px 12px; border-radius:5px;
-      display:inline-block; margin-right:10px; color:#0f0;
+      display:inline-block; margin-right:10px; color:#22c55e;
     }
     .copy-btn {
       background:#22c55e; border:none; padding:8px 14px; border-radius:5px;
       color:#fff; cursor:pointer; font-weight:600;
     }
-    section#tokenomics {padding:80px 20px; background:#0f0f0f; text-align:center;}
-    #tokenomics h2 {font-size:2.5em; margin-bottom:15px;}
-    #tokenomics p {color:#aaa; max-width:800px; margin:0 auto 40px;}
+    section#tokenomics { padding:80px 20px; background:#0f0f0f; text-align:center; }
+    #tokenomics h2 { font-size:2.5em; margin-bottom:15px; }
+    #tokenomics p { color:#aaa; max-width:800px; margin:0 auto 40px; }
     .cards {
       display:grid; grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
       gap:20px; max-width:1000px; margin:0 auto 40px;
@@ -70,25 +73,25 @@
       background:#1c1c24; padding:20px; border-radius:15px;
       box-shadow:0 4px 15px rgba(0,0,0,.4);
     }
-    .card h3 {margin-bottom:10px; color:#7c5cff;}
-    .card p {font-size:1.2em; font-weight:600;}
-    canvas {max-width:400px; margin:0 auto;}
+    .card h3 { margin-bottom:10px; color:#7c5cff; }
+    .card p { font-size:1.2em; font-weight:600; }
+    canvas { max-width:400px; margin:0 auto; }
     .buy-btn {
       position:fixed; bottom:20px; right:20px;
       background:#22c55e; color:#fff; padding:14px 26px; border-radius:50px;
       font-weight:700; box-shadow:0 4px 20px rgba(0,0,0,.4); transition:0.2s; z-index:1000;
     }
-    .buy-btn:hover {background:#16a34a;}
+    .buy-btn:hover { background:#16a34a; }
   </style>
 </head>
 <body>
   <header>
-    <div class="logo">PoorCoin (POOR)</div>
+    <div class="logo"><a href="https://poorcoin.net">PoorCoin (POOR)</a></div>
     <nav>
       <a href="#tokenomics">Tokenomics</a>
       <a href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">BscScan</a>
-      <a href="https://t.me/poorcoin-bsc" target="_blank">Telegram</a>
-      <a href="https://twitter.com/SeeeskoTodorov" target="_blank">Twitter</a>
+      <a href="https://t.me/poorcoin_bsc" target="_blank">Telegram</a>
+      <a href="https://x.com/SeeeskoTodorov" target="_blank">Twitter</a>
       <a href="https://medium.com/@seeesko" target="_blank">Medium</a>
     </nav>
   </header>
