--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <a href="https://pancakeswap.finance/swap?outputCurrency=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">Buy on PancakeSwap</a>
       <a href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">View on BscScan</a>
     </div>
-    <img src="poorcoin.png" alt="PoorCoin.png">
+    <img src="PoorCoin.png" alt="PoorCoin.png">
 
     <div class="contract-box">
       <p>Official Contract Address:</p>
