--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ header nav a{margin-left:20px;color:#aaa;text-decoration:none}
   </div>
 
   <!-- Hero Logo -->
-  <img src="poorcoin.png" alt="poorcoi.png" style="width:220px;margin-top:20px;animation:float 3s ease-in-out infinite;">
+  <img src="poorcoin.png" alt="poorcoin.png" style="width:220px;margin-top:20px;animation:float 3s ease-in-out infinite;">
 
   <div class="contract-box">
     <p>Official Contract Address:</p>
