--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <div class="container">
     <div class="card logo-box">
       <h2>Official Logo</h2>
-      <img src="poor_logo.png" alt="PoorCoin Logo">
+      <img src="poorcoin_logo.png" alt="poorcoin_logo.png">
     </div>
 
     <div class="card links">
