--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body>
 
 <header>
-  <img src="poorcoin_logo.png" alt="PoorCoin Logo">
+  <img src="poorcoin_logo.png" alt="poorcoin_logo.png">
   <nav>
     <a class="navlink" href="#tokenomics" data-scroll="#tokenomics">Tokenomics</a>
     <a class="navlink" href="#project-links" data-scroll="#project-links">Links</a>
